kubernetes/base/ham-radio-questions/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ham-radio-questions
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nginx
          image: ham-radio-questions
          ports:
            - name: http
              containerPort: 80
