kubernetes/base/ham-radio-questions/resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ham-radio-questions
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
